# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import resourcesRouter from "./resources";
+import lessonsRouter from "./lessons";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(resourcesRouter);
+router.use(lessonsRouter);
 
 export default router;
